@@ -45,9 +45,14 @@ import java.nio.file.Path;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
 
+import io.cryostat.net.web.http.HttpMimeType;
+
 import io.vertx.core.MultiMap;
 import io.vertx.core.buffer.Buffer;
+import io.vertx.core.http.HttpHeaders;
 import itest.bases.JwtAssetsSelfTest;
+import itest.util.Utils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.http.client.utils.URIBuilder;
 import org.hamcrest.MatcherAssert;
 import org.hamcrest.Matchers;
@@ -69,13 +74,14 @@ public class ArchivedRecordingJwtDownloadIT extends JwtAssetsSelfTest {
             archivedResource = createArchivedRecording(resource);
             String downloadUrl =
                     getTokenDownloadUrl(
-                            new URIBuilder(archivedResource.toURI())
-                                    .setPath(
-                                            archivedResource
-                                                    .getPath()
-                                                    .replace("/api/v1/", "/api/v2.1/"))
-                                    .build()
-                                    .toURL());
+                            new URL(
+                                    String.format(
+                                            "http://%s:%d/api/beta/recordings/%s/%s",
+                                            Utils.WEB_HOST,
+                                            Utils.WEB_PORT,
+                                            SELF_REFERENCE_TARGET_ID,
+                                            StringUtils.substringAfter(
+                                                    archivedResource.getPath(), "recordings/"))));
             assetDownload =
                     downloadFileAbs(downloadUrl, TEST_RECORDING_NAME, ".jfr")
                             .get(REQUEST_TIMEOUT_SECONDS, TimeUnit.SECONDS);
@@ -87,7 +93,15 @@ public class ArchivedRecordingJwtDownloadIT extends JwtAssetsSelfTest {
                 cleanupCreatedResources(resource.getPath());
             }
             if (archivedResource != null) {
-                cleanupCreatedResources(archivedResource.getPath());
+                // updated because of v1 RecordingDeleteHandler deprecation
+                String updatedArchivedPath =
+                        archivedResource
+                                .getPath()
+                                .replaceFirst("/api/v1/", "/api/beta/")
+                                .replaceFirst(
+                                        "/recordings/",
+                                        String.format("/recordings%s/", SELF_REFERENCE_TARGET_ID));
+                cleanupCreatedResources(updatedArchivedPath);
             }
             if (assetDownload != null) {
                 Files.deleteIfExists(assetDownload);
@@ -125,6 +139,7 @@ public class ArchivedRecordingJwtDownloadIT extends JwtAssetsSelfTest {
         CompletableFuture<URL> future = new CompletableFuture<>();
         webClient
                 .patch(resource.getPath())
+                .putHeader(HttpHeaders.CONTENT_TYPE.toString(), HttpMimeType.PLAINTEXT.mime())
                 .sendBuffer(
                         Buffer.buffer("SAVE"),
                         ar -> {
